# focus-marches-v2

./: .env.default  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
.github/workflows/: tests.yml
api/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
api/app/: config.py  db.py  dependencies.py  importation.py  main.py
api/app/helpers/: categorisation.py  conf.py  opendatasoft.py
api/app/models/: db.py  dto.py  dto_importation.py  enums.py  filters.py
api/app/router/: api_router.py  concession_router.py  cpv_router.py  erreurs_import_router.py  lieu_router.py  marche_router.py  structure_router.py
api/app/router/conf/: conf_router.py  models.py
api/app/router/structure/: models.py  router.py
api/tests/: conftest.py  docker-compose.yml  factories.py  mariadb_testcontainer.py  test_importation.py
api/tests/api/: test_concession.py  test_conf.py  test_cpv.py  test_erreurs.py  test_healthcheck.py  test_lieu.py  test_marche.py  test_structure.py
api/tests/files/: infogreffe.csv  liste_concessions_valides.json  liste_marches_valides.json  liste_pour_erreurs.json
api/tests/helpers/: test_categorisation.py
front/: .dockerignore  .gitlab-ci.yml  .prettierignore  .prettierrc.json  Dockerfile  README.md  components.d.ts  eslint.config.js  index.html  openapi-ts.config.js  package-lock.json  package.json  tsconfig.json  vite.config.mjs  vite.config.ts
front/docker/: settings.js.template
front/nginx/: no-cache.conf
front/src/: main.js  main.ts  types.d.ts
front/tests/: api_test_data.ts  (+3 more)
(+90 files in other folders)
